Fixed Provider Modal cut off on top

--- a/src/pages/contacts/contactRecordInfo/modals/modals.scss
+++ b/src/pages/contacts/contactRecordInfo/modals/modals.scss
@@ -227,7 +227,7 @@
   top: -33px !important;
   right: -71px !important;
   @media (max-width: 480px) {
-    top: -15px !important;
+    top: 15px !important;
     right: -15px !important;
   }
 }
