--- a/src/pages/contacts/contactRecordInfo/modals/provider-modal.scss
+++ b/src/pages/contacts/contactRecordInfo/modals/provider-modal.scss
@@ -107,6 +107,7 @@
   margin: 0px;
 
   @media (max-width: 480px) {
+    margin-top: 50px;
     .mble-title {
       font-size: 32px;
     }
